[gd_scene load_steps=9 format=3 uid="uid://8ld6je42g41r"]

[ext_resource type="Script" path="res://Scenes/player.gd" id="1_dlvwq"]
[ext_resource type="Texture2D" uid="uid://cxquwllyvrjha" path="res://Assets/graphics/player/basic/idle.png" id="1_j5w4o"]
[ext_resource type="Texture2D" uid="uid://cqp3h8qx1aflw" path="res://Assets/graphics/player/gun/idle.png" id="3_7mlcv"]
[ext_resource type="Texture2D" uid="uid://cyyrpyh2uvu26" path="res://Assets/graphics/player/basic/walk.png" id="3_yv4gn"]
[ext_resource type="Texture2D" uid="uid://cr4rh3esr8lwy" path="res://Assets/graphics/player/gun/walk.png" id="5_j4kmy"]
[ext_resource type="Texture2D" uid="uid://beiwrqf73bodu" path="res://Assets/graphics/bullet/fire.png" id="6_hlg78"]

[sub_resource type="SpriteFrames" id="SpriteFrames_jonug"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_j5w4o")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_7mlcv")
}],
"loop": true,
"name": &"idle_gun",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_yv4gn")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_j4kmy")
}],
"loop": true,
"name": &"jump_gun",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_j5w4o")
}, {
"duration": 1.0,
"texture": ExtResource("3_yv4gn")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_7mlcv")
}, {
"duration": 1.0,
"texture": ExtResource("5_j4kmy")
}],
"loop": true,
"name": &"walk_gun",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_uhg0l"]
radius = 5.0
height = 14.0

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_layer = 2
collision_mask = 13
script = ExtResource("1_dlvwq")

[node name="Sprites" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_jonug")
animation = &"walk_gun"
autoplay = "idle"

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(5, 5)
position_smoothing_enabled = true
position_smoothing_speed = 12.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_uhg0l")

[node name="Timers" type="Node" parent="."]

[node name="ShootTimer" type="Timer" parent="Timers"]
wait_time = 0.6
one_shot = true

[node name="FireTimer" type="Timer" parent="Timers"]
wait_time = 0.1
one_shot = true

[node name="Fire" type="Node2D" parent="."]

[node name="FireLeft" type="Sprite2D" parent="Fire"]
visible = false
position = Vector2(-10.5, 2)
texture = ExtResource("6_hlg78")
flip_h = true

[node name="FireRight" type="Sprite2D" parent="Fire"]
visible = false
position = Vector2(10.5, 2)
texture = ExtResource("6_hlg78")

[connection signal="timeout" from="Timers/ShootTimer" to="." method="_on_shoot_timer_timeout"]
[connection signal="timeout" from="Timers/FireTimer" to="." method="_on_fire_timer_timeout"]
